--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Generate your analysis_options file from the linter rules you want to use.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="linter_editor">
+  <meta name="apple-mobile-web-app-title" content="Flutter Linter Editor">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>linter_editor</title>
+  <title>Flutter Linter Editor</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
